# hibs-quantitative-labs.github.io

./: .gitignore  README.md  download_queue.txt  index.html  m5_forensic_media_suite.py  pyproject.toml  requirements.txt
deploy/: com.hibs.forensic-media-api.plist  com.hibs.forensic-media-worker.plist  nginx-api.conf
desktop/: __init__.py  __main__.py  server.py  service.py
desktop/static/: app.js  index.html  styles.css
docs/: ARCHITECTURE.md
media_engine/: __init__.py  __main__.py  backend_ffmpeg.py  custody.py  engine.py  hardware.py  planner.py  probe.py  standards.py  types.py
media_suite/: __init__.py  api.py  cli.py  config.py  daemon.py  dashboard.py  encoders.py  engine_bridge.py  forensics.py  input.py  integrity.py  jobs.py  notifications.py  pipeline.py  platform.py  probe.py  queue.py  streams.py  telemetry.py  upload.py  webhook.py  worker.py
scripts/: install-desktop.sh
