[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hibs-media-studio"
version = "2.0.0"
description = "Forensic any-file media conversion — owned engine, desktop studio, API farm"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "HIBS Quantitative Labs" }]
keywords = ["ffmpeg", "forensic", "media", "transcode", "prores"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: MacOS X",
  "Environment :: Win32 (MS Windows)",
  "Environment :: X11 Applications",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
  "yt-dlp>=2024.12.0",
  "boto3>=1.34.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
desktop = [
  "pywebview>=5.0",
]
dev = [
  "hibs-media-studio[desktop]",
]

[project.scripts]
hibs-media-studio = "desktop.__main__:main"
forensic-media-suite = "media_suite.cli:main"

[tool.setuptools.packages.find]
include = ["media_engine*", "media_suite*", "desktop*"]

[tool.setuptools.package-data]
desktop = ["static/*"]
